applications/tetris/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tetris

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tetris
      version: v1

  template:
    metadata:
      labels:
        app: tetris
        version: v1

    spec:

      containers:
      - name: tetris

        image: IMAGE_PLACEHOLDER

        imagePullPolicy: Always

        ports:
        - containerPort: 80
