applications/tetris/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tetris-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /tetris(/|$)(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: tetris
                port:
                  number: 80
